--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "test component",
   "author": {
     "name": "dev",
-    "email": ""
+    "email": "dhairyasehgal2307@gmail.com"
   },
   "license": "MIT",
   "repository": "",
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@incorta-org/create-incorta-component": "2.0.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -53,7 +54,6 @@
     "prettier": "^2.0.4",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.3",
-    "@incorta-org/create-incorta-component": "2.0.5",
     "vitest": "^0.31.4",
     "vitest-dom": "^0.1.0"
   },
@@ -61,8 +61,12 @@
     "dist"
   ],
   "dependencies": {
+    "@formulajs/formulajs": "^4.4.8",
     "@incorta-org/component-sdk": "~2.0.0",
+    "@silevis/reactgrid": "^4.1.12",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-spreadsheet": "^0.9.5",
+    "scheduler": "^0.23.2"
   }
 }
